--- a/template/package.json
+++ b/template/package.json
@@ -14,10 +14,10 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vant": "^0.9.9",
-    "vant-css": "^0.9.9",
-    "vue": "^2.4.2"{{#router}},
-    "vue-router": "^2.7.0"{{/router}}
+    "vant": "^0.10.0",
+    "vant-css": "^0.10.0",
+    "vue": "^2.5.0"{{#router}},
+    "vue-router": "^3.0.0"{{/router}}
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -96,8 +96,7 @@
     "npm": ">= 3.0.0"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "Android >= 4.0",
+    "iOS >= 7"
   ]
 }
