--- a/template/package.json
+++ b/template/package.json
@@ -14,13 +14,13 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vant": "^1.0.0",
-    "vant-css": "^1.0.0",
-    "vue": "^2.5.0"{{#router}},
+    "vant": "^1.0.1",
+    "vant-css": "^1.0.1",
+    "vue": "^2.5.16"{{#router}},
     "vue-router": "^3.0.0"{{/router}}
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^8.1.0",
     "babel-core": "^6.22.1",
     {{#lint}}
     "babel-eslint": "^7.1.1",
@@ -45,11 +45,11 @@
     {{/lint}}
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
+    "html-webpack-plugin": "^3.0.6",
+    "http-proxy-middleware": "^0.18.0",
     "webpack-bundle-analyzer": "^2.2.1",
     {{#unit}}
     "cross-env": "^5.0.1",
@@ -77,17 +77,17 @@
     "selenium-server": "^3.0.1",
     {{/e2e}}
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "shelljs": "^0.8.1",
     "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.2.0",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "ora": "^2.0.0",
     "rimraf": "^2.6.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.0",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^14.2.1",
+    "vue-style-loader": "^4.0.2",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "3.11.0",
+    "webpack-dev-middleware": "^3.0.1",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   },
